--- a/src/app/skill-labeller/label-display/labeller.component.css
+++ b/src/app/skill-labeller/label-display/labeller.component.css
@@ -14,3 +14,25 @@
 .swipe-right {
   background-color: #43A047;
 }
+
+@media (min-width: 1281px) {
+  .card-container {
+    padding: 3rem 1.5rem;
+    text-align: center;
+    width: 35%;
+  }
+}
+
+
+/*
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 1025px to 1280px
+*/
+
+@media (min-width: 1025px) and (max-width: 1280px) {
+  .card-container {
+    padding: 3rem 1.5rem;
+    text-align: center;
+    width: 35%;
+  }
+}
