Add context, upgrade material library calls
- Upgrade calls to angular material library to work for new version
- Replace test labels with one indicating context, and update label display and help to reflect this

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<md-toolbar color="primary">
+<mat-toolbar color="primary">
   <span>Workforce Data Initiative Skill Labeller</span>
-</md-toolbar>
+</mat-toolbar>
 
 <app-labeller></app-labeller>
